--- a/rich_club.ipynb
+++ b/rich_club.ipynb
@@ -5,7 +5,9 @@
    "id": "8230848c-79ed-44c8-bbb8-34578b180c3a",
    "metadata": {},
    "source": [
-    "This tutorial recreates the Rich Club analysis from Tow\n",
+    "# Code tutorial connectomics I - Computational Neuroscience\n",
+    "\n",
+    "This tutorial recreates the Rich Club analysis from Towlson et al., 2013, Journal of Neuroscience\n",
     "\n",
     "# Imports"
    ]
@@ -36,10 +38,6 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "#import importlib\n",
-    "#import connectomics_functions   \n",
-    "#importlib.reload(connectomics_functions)\n",
-    "#from connectomics_functions import plot_adjacency_matrix,metric_set, randomize_graph, rich_club, plot_rich_club, plot_network, plot_weight_distribution,visualize_nx_graph\n",
     "from connectomics_functions import *"
    ]
   },
@@ -182,8 +180,7 @@
     "    create_using=nx.Graph()\n",
     ")\n",
     "\n",
-    "visualize_graph(G_dir_demo,node_size=100, edge_width_factor=10, label_font_size=72)\n",
-    "#plot_network(G_dir_demo, node_size_factor=30, edge_width_factor=2, cmap=\"viridis\", figsize=(5,5))\n",
+    "plot_network(G_dir_demo, node_size_factor=30, edge_width_factor=2, cmap=\"viridis\", figsize=(5,5))\n",
     "\n",
     "\n",
     "plot_adjacency_matrix(G_dir_demo,sort_nodes=False,figsize=(2,2))\n",
